// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sfc ref transform > $ unwrapping 1`] = `
"import { ref, shallowRef } from 'vue'
      
      const foo = (ref())
      const a = (ref(1))
      const b = (shallowRef({
        count: 0
      }))
      let c = () => {}
      let d"
`;

exports[`sfc ref transform > $ref & $shallowRef declarations 1`] = `
"const foo = ref()
      const a = ref(1)
      const b = shallowRef({
        count: 0
      })
      let c = () => {}
      let d"
`;

exports[`sfc ref transform > usage /w typescript 1`] = `
"const msg = ref<string | number>('foo');
          const bar = ref <string | number>('bar');"
`;

exports[`sfc ref transform > usage in normal <script> 1`] = `
"
      export default {
        setup() {
          const count = ref(0)
          const inc = () => count.value++
          return ({ count })
        }
      }
      "
`;

exports[`sfc ref transform > usage with normal <script> (has macro usage) + <script setup> (no macro usage) 1`] = `
"const data = ref()
      
      console.log(data.value)"
`;
